# demo-poetry-en-legende

./: Makefile  README.md  pyproject.toml
poetry_project/: main.py
poetry_project/presentation/src/: App.css  App.tsx  Slide.css  Slide.tsx  SliderProgress.css  SliderProgress.tsx
tests/: test_milou.py
