[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["Courtcircuits <tristan-mihai.radulescu@etu.umontpellier.fr>"]
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
